plugins {
    id 'java'
}

group = 'hexcustomitems'
version = '3.0.0'

repositories {
    mavenCentral()
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        name = 'placeholderapi'
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'
    // Optionale, weiche Integrationen (nur compileOnly -> kein harter Runtime-Zwang, siehe softdepend).
    compileOnly 'me.clip:placeholderapi:2.11.6'
    compileOnly project(':plugins:HexCore')

    // Tests (nur Test-Classpath, landen nicht im Jar).
    testImplementation 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.110.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

jar {
    archiveFileName = "HexCustomItems-${version}.jar"
}
